[package]
name = "kuromame-rs"
version = "1.1.0"
edition = "2024"

[dependencies]
moleucle_3dview_rs = { git = "https://github.com/IndigoCarmine/moleucle_3dview_rs.git", version = "0.1.1" }
eframe = "0.33.3"
egui = "0.33.3"
egui-wgpu = "0.33.3"
rfd = "0.15"
anyhow = "1.0"
lin_alg = "1.3.14"
material-icons = "0.3.0"
